images size changed

--- a/home.html
+++ b/home.html
@@ -22,7 +22,7 @@
 
     <div class="icon-bar">
       <a href="https://www.facebook.com/Thai-Gai-Yang-Cafe-117707684921763/?ref=page_internal" class="facebook"><i class="fa fa-facebook"></i></a> 
-      <a href="https://www.yelp.com/biz/thai-gai-yang-cafe-saint-louis" class="twitter"><i class="fa fa-twitter"></i></a> 
+      <a href="tel: +1 314-862-4400" class="twitter"><i class="fa fa-phone"></i></a> 
       
       
     </div>
@@ -57,7 +57,7 @@
         <div class="landing-text">
           <h3>Welcome to</h3>
           <h2 class="pb-3">Thai Gai Yang</h2>
-          <a href="#" target="_blank"><button type="button" class="btn btn-outline-light mt-5">Call Now</button></a>
+          <a href="tel: +1 314-862-4400" target="_blank"><button type="button" class="btn btn-outline-light mt-5">Call Now</button></a>
         </div>
       </div><!----end ladning page--->
 
